Updated keyboard handling.

--- a/index.html
+++ b/index.html
@@ -11,13 +11,13 @@
     <p>Here is a cool game.</p>
     <script type="text/javascript">
 
-        //Aliases
+        // Aliases
         let Application = PIXI.Application,
             loader = PIXI.loader,
             resources = PIXI.loader.resources,
             Sprite = PIXI.Sprite;
 
-        //Create a Pixi Application
+        // Create a Pixi Application
         let app = new Application({
             width: 640,
             height: 480,
@@ -26,35 +26,41 @@
             resolution: 1
         });
 
-        let alien
+        // Global vaiables
+        let alien;
         let gun;
+        let left = keyboard(37);
+        let right = keyboard(39);
 
-        //Add the canvas that Pixi automatically created for you to the HTML document
+        right.press = () => {
+            gun.vx = 3;
+        };
+
+        right.release = () => {
+            gun.vx = 0;
+        }
+
+        left.press = () => {
+            gun.vx = -3;
+        };
+
+        left.release = () => {
+            gun.vx = 0;
+        }
+
+        // Add the canvas that Pixi automatically created for you to the HTML document
         document.body.appendChild(app.view);
 
-        //load an image and run the `setup` function when it's done
+        // Load an image and run the `setup` function when it's done
         loader
             .add("alien.png")
             .add("gun.png")
             .load(setup);
 
-        let leftKey = keyboard(37);
-        let rightKey = keyboard(39);
-
-        rightKey.press = () => {
-            gun.x += 4;
-        };
-
-        leftKey.press = () => {
-            gun.x -= 4;
-        };
-
-        keyObject.release = () => {
-            //key object released
-        };
-
-        //This `setup` function will run when the image has loaded
+    
+        // This `setup` function will run when the image has loaded
         function setup() {
+
             alien = new Sprite(resources["alien.png"].texture);
             alien.x = 16;
             alien.y = 32;
@@ -63,12 +69,11 @@
             gun = new Sprite(resources["gun.png"].texture);
             gun.x = 320 - 16;
             gun.y = 480 - 48;
+            gun.vx = 0;
 
             app.stage.addChild(alien);
             app.stage.addChild(gun);
             app.ticker.add(delta => gameLoop(delta));
-
-            
         }
 
         function gameLoop(delta) {
@@ -82,8 +87,7 @@
             }
 
             alien.x += alien.vx;
-
-
+            gun.x += gun.vx;
         }
 
         function keyboard(keyCode) {
