corrected swarm movement, added sound & started laser

--- a/index.html
+++ b/index.html
@@ -3,10 +3,12 @@
     <head>
         <title>Space Invaders</title>
         <script src="/pixi.min.js"></script>
+        <script src="/sound.js"></script>
     </head>
     <body>
         <h1>Space Invaders</h1>
         <p>Here is a cool game.</p>
-        <script type="text/javascript" src="/game.js"></script>
+        <script src="/game.js"></script>
+        
     </body>
 </html>
