--- a/index.html
+++ b/index.html
@@ -4,10 +4,12 @@
         <title>Space Invaders</title>
         <script src="/pixi.min.js"></script>
         <script src="/sound.js"></script>
+        <link href="https://fonts.googleapis.com/css?family=Roboto" rel="stylesheet">
+        <link rel="stylesheet" type="text/css" href="style.css">
     </head>
     <body>
         <h1>Space Invaders</h1>
-        <p>Here is a cool game.</p>
+        <p>Here is a cool game from 1978. Reproduced here is javascript, using PIXI.js.</p>
         <script src="/game.js"></script>
         
     </body>
