--- a/index.html
+++ b/index.html
@@ -9,8 +9,9 @@
     </head>
     <body>
         <h1>Space Invaders</h1>
-        <p>Here is a cool game from 1978. Reproduced here is javascript, using PIXI.js.</p>
+        <p>Here is a cool game from 1978. Reproduced here in javascript, using PIXI.js.</p>
         <script src="/game.js"></script>
+        <p>Created by Steve Rayner. Download the source code from <a href="https://github.com/srayner/invaders">github.com</a>.</p>
         
     </body>
 </html>
