--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
         <title>Space Invaders</title>
         <script src="/pixi.min.js"></script>
         <script src="/sound.js"></script>
+        <script src="/collision-detection.js"></script>
         <link href="https://fonts.googleapis.com/css?family=Roboto" rel="stylesheet">
         <link rel="stylesheet" type="text/css" href="style.css">
     </head>
